--- a/styles.css
+++ b/styles.css
@@ -1,3 +1,157 @@
+:root {
+    --white: #FFFFFF;
+    --black: #000000;
+    --dark: #232830;
+    --very-light-pink: #C7C7C7;
+    --text-input-field: #F7F7F7;
+    --hospital-green: #ACD9B2;
+    --sm: 14px;
+    --md: 16px;
+    --lg: 18px;
+}
+* {
+    margin: 0;
+    padding: 0;
+    box-sizing: border-box;
+}
+html {
+    font-family: 'Quicksand', sans-serif;
+    font-size: 62.5%;
+}
 body {
-    background-color: brown;
+    font-size: 1.6rem;
+}
+
+.inactive {
+    display: none;
+}
+.header {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    padding: 12px 48px;
+    width: 100%;
+    height: 54px;
+    box-shadow: 0px 0px 4px 0px rgba(0,0,0,.2);
+}
+.header__menu-icon {
+    display: none;
+}
+.navbar {
+    display: flex;
+    align-items: center;
+}
+.header__logo {
+    width: 144px;
+    height: 30px;
+}
+.navbar ul,
+.account ul {
+    display: flex;
+    align-items: center;
+    list-style: none;
+}
+.navbar ul {
+    margin-left: 52px;
+}
+.navbar ul li a {
+    padding: 4px 8px;
+    font-weight: 500;
+    text-decoration: none;
+    color: var(--very-light-pink);
+    border: 1px solid transparent;
+    border-radius: 8px;
+}
+.navbar ul li a:hover {
+    color: var(--hospital-green);
+    border: 1px solid var(--hospital-green);
+}
+.account__email {
+    margin-right: 16px;
+    font-size: var(--sm);
+    cursor: pointer;
+    color: var(--black);
+}
+.account__email img,
+.account__shopping-cart img {
+    vertical-align: bottom;
+}
+.account__email img {
+    width: 16px;
+    height: 16px;
+    transform: rotate(90deg);
+}
+.account__shopping-cart {
+    position: relative;
+}
+.account__shopping-cart div {
+    position: absolute;
+    top: -8px;
+    right: -8px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    width: 20px;
+    height: 20px;
+    font-size: var(--sm);
+    font-weight: bold;
+    color: white;
+    border-radius: 50%;
+    background-color: var(--hospital-green);
+}
+
+
+.menu-container {
+    position: absolute;
+    top: 55px;
+    right: 88px;
+    padding: 25px 18px;
+    width: 153px;
+    height: auto;
+    background-color: var(--white);
+    border-radius: 4px;
+    box-shadow: 0px 0px 6px 0px rgba(0, 0, 0, 15%) ;
+}
+.menu {
+    list-style: none;
+}
+.menu li {
+    margin-bottom: 30px;
+    text-align: end;
+    font-weight: bold;
+}
+.menu li:nth-child(3) {
+    margin-bottom: 20px;
+}
+.menu li:last-child {
+    margin-bottom: 0px;
+}
+.menu li a {
+    margin: 0px 7px;
+    text-decoration: none;
+    color: var(--black);
+}
+.menu li .divider {
+    width: 100%;
+    height: 1px;
+    opacity: .5;
+    background-color: var(--very-light-pink);
+}
+.menu li:last-child a {
+    font-size: var(--sm);
+    color: var(--hospital-green);
+}
+@media (max-width: 940px) {
+    .header {
+        padding: 12px 10px;
+    }
+    .header__menu-icon {
+        display: block;
+    }
+    .header .navbar ul {
+        display: none;
+    }
+    .header .account__email {
+        display: none;
+    }
 }
