--- a/styles.css
+++ b/styles.css
@@ -1,3 +1,4 @@
+/* General */
 :root {
     --white: #FFFFFF;
     --black: #000000;
@@ -21,10 +22,11 @@ html {
 body {
     font-size: 1.6rem;
 }
-
 .inactive {
     display: none;
 }
+
+/* Header - Navbar*/
 .header {
     display: flex;
     justify-content: space-between;
@@ -100,7 +102,7 @@ body {
     background-color: var(--hospital-green);
 }
 
-
+/* Desktop menu */
 .menu-container {
     position: absolute;
     top: 55px;
@@ -141,6 +143,66 @@ body {
     font-size: var(--sm);
     color: var(--hospital-green);
 }
+
+/* Mobile menu */
+.mobile-menu-container {
+    position: absolute;
+    top: 55px;
+    left: 0;
+    width: 100%;
+}
+.mobile-menu-container-content {
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+    padding: 20px;
+    width: 100%;
+    min-height: 100vh;
+}
+.mobile-menu {
+    display: flex;
+    flex-direction: column;
+}
+.mobile-menu__icon-close {
+    align-self: end;
+}
+.mobile-menu p {
+    margin-bottom: 40px;
+    color: var(--black);
+    font-weight: bold;
+}
+.mobile-menu ul li {
+    margin-bottom: 36px;
+    list-style: none;
+}
+.mobile-menu ul li:last-child {
+    margin-bottom: 40px;
+}
+.mobile-menu ul li a {
+    text-decoration: none;
+    color: var(--black); 
+    font-weight: bold;
+}
+.divider {
+    margin-bottom: 40px;
+    width: 100%;
+    height: 1px;
+    background-color: var(--text-input-field);
+}
+.mobile-menu__footer {
+    font-size: var(--sm);
+}
+.mobile-menu__footer p {
+    margin-bottom: 4px;
+    color: var(--very-light-pink);
+    font-weight: 300;
+}
+.mobile-menu__footer a {
+    text-decoration: none;
+    color: var(--hospital-green);
+    font-weight: bold;
+}
+
 @media (max-width: 940px) {
     .header {
         padding: 12px 10px;
@@ -152,6 +214,16 @@ body {
         display: none;
     }
     .header .account__email {
+        display: none;
+    }
+    .menu-container {
+        display: none;
+    }
+}
+
+@media (min-width: 941px) {
+    
+    .mobile-menu-container {
         display: none;
     }
 }
