--- a/styles.css
+++ b/styles.css
@@ -204,13 +204,15 @@ body {
 }
 
 /* Aside (Product details & Shopping cart */
-.product-details {
+.shopping-cart-aside,
+.product-details-aside {
     position: absolute;
     right: 0;
     width: 384px;
     height: 100vh;
 }
-.product-details-container {
+/* Shopping cart */
+.shopping-cart-aside-container {
     position: relative;
     display: grid;
     grid-auto-rows: auto 1fr auto;
@@ -301,6 +303,84 @@ body {
     background-color: var(--hospital-green);
 }
 
+/* Product details */
+.product-details-aside-container {
+    position: relative;
+    display: grid;
+    grid-template-rows: auto auto 1fr;
+    width: 100%;
+    height: 100%;
+    overflow-y: scroll;
+    border-radius: 0px 0px 10px 10px;
+    box-shadow: 0px 0px 5px rgba(0,0,0,.10);
+}
+.product-details__icon-close {
+    position: absolute;
+    top: 4px;
+    left: 4px;
+    padding: 12px;
+    width: 40px;
+    height: 40px;
+    border-radius: 50%;
+    background-color: var(--white);
+    box-shadow: 0px 0px 4px 0px rgba(0,0,0,.10);
+}
+.product-details__icon-close:hover {
+    cursor: pointer;
+}
+.product-details__image {
+    width: 100%;
+    height: 384px;
+    object-fit: cover;
+    border-radius: 0px 0px 20px 20px;
+}
+.image__dots {
+    margin: 4px auto 0px;
+}
+.image__dots span {
+    display: inline-block;
+    margin: 0 4px;
+    width: 7px;
+    height: 7px;
+    cursor: pointer;
+    border-radius: 50%;
+    background-color: var(--text-input-field);
+}
+.image__dots .dot--active {
+    background-color: var(--hospital-green);
+}
+.product-details__content {
+    display: grid;
+    grid-template-rows: 1fr auto;
+    padding: 24px 36px;
+    height: 100%;
+}
+.product-details__price {
+    margin-bottom: 4px;
+    font-size: 18px;
+    font-weight: bold;
+    font-family: Roboto;
+    color: var(--dardk);
+}
+.product-details__name {
+    margin-bottom: 20px;
+    font-size: 18px;
+    color: var(--very-light-pink);
+}
+.product-details__description {
+    margin-bottom: 20px;
+    color: var(--very-light-pink);
+}
+.primary-button--add-to-cart {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+}
+.primary-button img {
+    margin-right: 8px;
+    color: var(--white);
+}
+
 /* Product list */
 .main-container {
     display: grid;
@@ -351,7 +431,8 @@ body {
 }
 
 @media (max-width: 640px) {
-    .product-details {
+    .shopping-cart-aside,
+    .product-details-aside {
         width: 100%;
     }
     .title {
